fix overflowing ops lists and popup positioning

--- a/web/kiri/index.css
+++ b/web/kiri/index.css
@@ -1375,12 +1375,16 @@ details[open] summary::after {
 }
 #camops {
     display: flex;
-    padding: 5px 0 0 0;
+    padding: 0 0 0 0;
+}
+#oplist {
     max-height: 70vh;
-    /* overflow-y: auto; */
+    min-height: 0;
+    overflow-y: auto;
+    padding-top: 1px;
 }
 .cam-pop-op {
-    top: 50%;
+    top: 0;
     right: calc(100% + 4px);
     text-align: left;
     position: absolute;
